--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -30,11 +30,7 @@ jobs:
           poetry install --with dev --no-interaction --no-root
       - name: Run tests with pytest
         run: |
-          poetry run pytest --cov build --cov-report=xml
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          poetry run pytest
 
   publish-image:
     runs-on: ubuntu-24.04
