--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "rust-web-rcon"
-version = "0.2.0"
-description = ""
+version = "1.0.0"
+description = "Docker image providing the websocket Rcon client from Facepunch"
 authors = [
     {name = "Max Pfeiffer",email = "max@maxpfeiffer.ch"}
 ]
