--- a/charts/rust-web-rcon/templates/deployment.yaml
+++ b/charts/rust-web-rcon/templates/deployment.yaml
@@ -41,9 +41,11 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
-            {{- toYaml .Values.livenessProbe | nindent 12 }}
+            tcpSocket:
+              port: 80
           readinessProbe:
-            {{- toYaml .Values.readinessProbe | nindent 12 }}
+            tcpSocket:
+              port: 80
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
